--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 #Webtitle {
-    font-size: 128px;
-    color: blue;
+    font-size: 70px;
     font-weight: 200;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.redtxt {
-    color: red;
-    font-weight: 800;
+.text {
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #first {
     display: inline-block;
-    width: 500px;
-    border: 2px blue solid;
-    padding: 30px 0px ;
-    margin: 200px 0px;
+    border: 2px rgb(0, 0, 0) solid;
+    padding: 30px 30px ;
+    margin: 50px 0px;
 }
 
 
 .big {
     font-size: 64px;
+    font-weight: 500;
 }
 
 .container {
     display: inline-block;
     width: 300px;
     border: 2px red;
+}
+
+.img {
+    width: 300px;
+    
 }
